--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,6 @@ services:
         environment:
             MYSQL_DATABASE: 'tasks'
             MYSQL_ROOT_PASSWORD: 'root'
-            MYSQL_HOST: localhost
         ports:
             - '3306:3306'
         volumes: 
@@ -19,7 +18,7 @@ services:
         env_file:
             - .env
         environment:
-            - DATABASE_URL=mysql://${MYSQL_USERNAME}:${MYSQL_PASSWORD}@mysql:${MYSQL_PORT}/${MYSQL_DATABASE}?connect_timeout=40&pool_timeout=30&socket_timeout=40&schema=public
+            - DATABASE_URL=mysql://root:root@mysql:3306/tasks?connect_timeout=40&pool_timeout=30&socket_timeout=40&schema=public
         depends_on: 
             - mysql
         ports:
